(feat) new auth approach

--- a/shard.yml
+++ b/shard.yml
@@ -16,3 +16,5 @@ dependencies:
   gobject:
     github: jhass/crystal-gobject
     version: ~> 0.10.0
+  sqlite3:
+    github: crystal-lang/crystal-sqlite3
